--- a/pucanje.html
+++ b/pucanje.html
@@ -25,6 +25,8 @@
         .stiki{
             width: 60px;
             height: 90px;
+            border-radius: 20px;
+            margin: 6px;
         }.svedole{
             display: flex;
         }
@@ -59,8 +61,8 @@
             display: block;
             background-color: lightgray;
             width: fit-content;
-            margin: 5px;
-            margin-left: 40px;
+            margin: 6px;
+            
             border-radius: 5px;
             border: 1px solid black;
         }
@@ -68,7 +70,7 @@
             text-decoration: none;
             color: black;
             background-color: lightgrey;
-            border-radius: 3px;
+            border-radius: 5px;
             border: 2px solid black;
             font-size: small;
             font-weight: bold;
@@ -77,6 +79,7 @@
             width: fit-content;
             height: fit-content;
         }
+
   
     </style>
     
@@ -93,7 +96,7 @@
             <p id="brojac">vrijeme</p>
             <p id="bodovi">bodovi</p>
         </div>
-        <a id="forum" href="forum.html">vrati se na forum</a>
+        <a id="forum" href="forum.html">forum</a>
     </div>
 
 
