--- a/pucanje.html
+++ b/pucanje.html
@@ -85,7 +85,7 @@
     
 </head>
 <body>
-    
+    <p>Stisni kreni i pokušaj pogotiti što više meta!!! SRETNO!</p>
     <div id="okvir">
 
     </div>
