--- a/pucanje.html
+++ b/pucanje.html
@@ -81,13 +81,11 @@
         }
 
   
-    </style>
-    
+    </style> 
 </head>
 <body>
-    <p>Stisni kreni i pokušaj pogotiti što više meta!!! SRETNO!</p>
+    <p>Stisni kreni i pokušaj pogotiti što više meta!!! SRETNO!!</p>
     <div id="okvir">
-
     </div>
     <div class="svedole">
         <img class="stiki" src="stiki.png" alt="">
