--- a/pucanje.html
+++ b/pucanje.html
@@ -84,7 +84,7 @@
     </style> 
 </head>
 <body>
-    <p>Stisni kreni i pokušaj pogotiti što više meta!!! SRETNO!!</p>
+    <p id="paragraf">Stisni kreni i pokušaj pogotiti što više meta!!! SRETNO!!</p>
     <div id="okvir">
     </div>
     <div class="svedole">
